--- a/1-10.css
+++ b/1-10.css
@@ -65,3 +65,17 @@ footer{
   background-color:#AAAAAA;
   height:50px;
 }
+
+@media screen and (max-width:425px){
+  main{
+    display:block;
+    width:100%;
+  }
+  header{
+    width:100%;
+  }
+  .step-box{
+    width:90%;
+    margin:20px;
+  }
+}
