--- a/1-10.css
+++ b/1-10.css
@@ -66,16 +66,19 @@ footer{
   height:50px;
 }
 
-@media screen and (max-width:425px){
+@media screen and (max-width:768px){
+  header{
+    width:100%;
+  }
+  
   main{
     display:block;
     width:100%;
   }
-  header{
-    width:100%;
-  }
+  
   .step-box{
     width:90%;
+    padding-bottom:20px;
     margin:20px;
   }
 }
